# py-scrcpy-client

./: .gitignore  pyproject.toml
docs/source/: conf.py
scrcpy/: control.py  core.py
scrcpy_ui/: add_deivce.ui  config.py  main.py  main.ui  ui_add_device.py  ui_main.py  utils.py
scripts/: qt_turn.py
tests/: test_control.py  test_core.py
