[project]
name = "scrcpy-client"
version = "0.4.7"
description = "A client of scrcpy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "adbutils>=2.8.0",
    "av>=14.2.0",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "pyside6>=6.8.2.1",
]

[tool.setuptools]
packages = ["scrpy", "scrcpy_ui"] 

[tool.uv]
package = false
no-binary-package = ["av"]
#compile-bytecode = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.ruff]
line-length = 128
target-version = "py313"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

[tool.ruff.lint]
ignore = ["F401"]
